--- a/.github/workflows/github_page.yml
+++ b/.github/workflows/github_page.yml
@@ -1,38 +1,32 @@
-name: Deploy static content to Pages
+# name 可以自定义
+name: Deploy GitHub Pages
 
+# 触发条件：在 push 到 main/master 分支后，新的 Github 项目 应该都是 main，而之前的项目一般都是 master
 on:
   push:
-    branches: ["main"]
+    branches:
+      - main
 
+# 任务
 jobs:
-  deploy:
+  build-and-deploy:
+    # 服务器环境：最新版 Ubuntu
     runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      # 拉取代码
+      - name: Checkout
+        uses: actions/checkout@v2
         with:
-          node-version: 16
-          cache: npm
-      - uses: pnpm/action-setup@v2
-        with:
-          version: 7.3.0
+          persist-credentials: false
 
-      - name: Install Dependencies
-        run: pnpm install
+      # 生成静态文件
+      - name: Build
+        run: npm install && yarn build
 
-      - name: Build Packages
-        run: pnpm run build
-
-      - name: Build Docs
-        run: pnpm run docs:build
- 
+      # 部署到 GitHub Pages
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }} # 也就是我们刚才生成的 secret
           BRANCH: main # 部署到 gh-pages 分支，因为 main 分支存放的一般是源码，而 gh-pages 分支则用来存放生成的静态文件
-          FOLDER: docs/.vuepress/dist # vuepress 生成的静态文件存放的地方
- 
+          FOLDER: docs/.vuepress/dist # vuepress 生成的静态文件存放的地方 
