--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,6 @@ jobs:
         with:
           repo: TYB-LuoYun/TYB-LuoYun.github.io
           target_branch: master
-          build_dir: docs/.vuepress/dist
+          build_dir: docs/
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
