--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build": "vuepress build ./docs"
   },
   "dependencies": {
+    "axios": "^1.5.0",
+    "jquery": "^3.7.1",
     "vuepress": "2.0.0-beta.66",
     "vuepress-theme-reco": "2.0.0-beta.67"
   }
